<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- region data -->
    <string name="app_name">Wagwoord</string>
    <string name="totp">TOTP</string>
    <string name="totp_full">Time-based One-time Password</string>
    <string name="passwords">Passwords</string>
    <string name="addresses">Addresses</string>
    <string name="creditcards">Credit cards</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="server_url">Server url</string>
    <string name="data_updated">Data updated</string>
    <string name="data_updated_failed">Data updated failed</string>
    <!-- endregion data -->

    <!-- region Activities -->
    <string name="settings">Settings</string>
    <string name="request_autofill_permission">Settings</string>
    <!-- endregion common -->

    <!-- region permission -->
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="open_settings">Open settings</string>
    <!-- endregion permission -->

    <!-- region Clipboard -->
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="copy" tools:override="true">Copy</string>
    <string name="copy_to_clipboard_no_value">No value</string>
    <string name="copy_to_clipboard_copied">Copied</string>
    <!-- endregion Clipboard -->

    <!-- region search activity-->
    <string name="search">Search</string>
    <!-- endregion search -->

    <!-- region login activity-->
    <string name="connecting_to_server">Connecting to server</string>
    <string name="sync_data">Synchronizing data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>

    <!-- endregion login activity-->

    <!-- region response error messages -->
    <string name="unauthorised">Un authorised</string>
    <string name="server_error">Server error</string>

    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- endregion error messages -->

    <!-- region list menu item -->
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="close">Close</string>
    <string name="item_menu">Item menu:</string>
    <!-- endregion list menu item -->

    <!-- region crud item -->
    <string name="deleted">Item deleted</string>
    <!-- endregion  -->

    <!--region settings-->
    <string name="settings_category_server">Server</string>
    <string name="settings_category_server_change_login_title">Change or login</string>
    <string name="settings_category_server_change_login_summary">Change or login to server</string>

    <string name="settings_category_security">Security</string>
    <string name="settings_category_security_autofill_title">Open autofill settings</string>
    <string name="settings_category_security_autofill_summary_denied">Wagwoord is not set as default</string>
    <string name="settings_category_security_autofill_summary_granted">Wagwoord is set as default</string>
    <string name="settings_category_security_encryptLocal_title">Encrypt data locally</string>
    <string name="settings_category_security_encryptLocal_summary">Save data as encrypted on this device</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--endregion settings-->

    <!-- region properties -->
    <string name="property_name">Name</string>
    <string name="property_card_number">Card number</string>
    <string name="property_expires_in">Expires in</string>
    <string name="property_cvv">CVV</string>
    <string name="property_pin">Pin</string>
    <string name="property_bank">Bank</string>
    <string name="property_card_type">Card type</string>
    <string name="property_nfc">NFC</string>
    <string name="property_count">Count</string>
    <string name="property_sync">Sync</string>
    <string name="property_id">Id</string>
    <string name="property_server_id">Server Id</string>
    <string name="property_last_modified">Last modified</string>
    <string name="property_birthday">Birthday</string>
    <string name="property_username">Username</string>
    <string name="property_phone">Phone</string>
    <string name="property_organization">Organization</string>
    <string name="property_street">Street</string>
    <string name="property_second_street">Second street</string>
    <string name="property_city">City</string>
    <string name="property_state">State</string>
    <string name="property_country">Country</string>
    <string name="property_postal_code">Postal code</string>
    <string name="property_domain">Url</string>
    <string name="property_password">Password</string>
    <string name="property_issuer">Issuer</string>
    <string name="property_secret">Secret</string>
    <string name="property_digits">Digits</string>
    <string name="property_step">Step</string>
    <string name="property_encoding">Encoding</string>
    <string name="property_algorithm">Algorithm</string>
    <string name="property_window">Window</string>
    <string name="property_epoch">Epoch</string>

    <!-- endregion properties -->
</resources>
