<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_server">

        <Preference app:title="@string/settings_category_server_change_login_title"
            app:key="open_login"
            app:summary="@string/settings_category_server_change_login_summary"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_security">

        <Preference app:title="@string/settings_category_security_autofill_title"
            app:key="settings_open_autofill"
            app:summary="@string/settings_category_security_autofill_summary_denied"/>

        <SwitchPreferenceCompat
            app:key="settings_encrypt_data_locally"
            app:summary="@string/settings_category_security_encryptLocal_summary"
            app:title="@string/settings_category_security_encryptLocal_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>
