<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.auth.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="5"
            app:srcCompat="@drawable/ic_logo" />

        <EditText
            android:id="@+id/setup_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="15"
            android:hint="@string/server_url"
            android:text="http://10.0.2.2:4040/api"
            android:inputType="textUri"/>


        <EditText
            android:id="@+id/setup_encryption_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:ems="15"
            android:text="mut01046"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btn_login"
            android:onClick="login"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:spinning_bar_color="@color/colorDark"
            app:spinning_bar_padding="2dp"
            app:spinning_bar_width="5dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/login_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/error"/>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Skip"
        android:padding="25dp"
        android:textSize="25sp"
        android:onClick="skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>